<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_title"
        style="@style/headLayoutStyle" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/headBackStyle" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/headTitleStyle"
            android:text="@string/login" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_user"
        style="@style/editTextStyle"
        android:hint="@string/hint_user"
        android:inputType="number" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/editTextStyle"
        android:layout_marginBottom="@dimen/header_back_margin"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        style="@style/btnUserStyle"
        android:text="立即登录" />

    <RelativeLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_back_margin" >

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/header_back_margin"
            android:text="@string/fastregister"
            android:textColor="@color/title"
            android:textSize="@dimen/tv_size_24" />

        <TextView
            android:id="@+id/tv_findpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/header_back_margin"
            android:text="@string/forget_password"
            android:textColor="@color/app_text_gray"
            android:textSize="@dimen/tv_size_24" />
    </RelativeLayout>

</LinearLayout>