<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_title"
        style="@style/headLayoutStyle" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/headBackStyle" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/headTitleStyle"
            android:text="@string/order_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_order_optionmenu"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/bg_order_title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_orderall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/order_option_all"
                android:textColor="@color/text_tab_color" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_order_nonpay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/order_option_nonpay"
                android:textColor="@color/text_tab_color" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_order_nondeliver"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/order_option_nondeliver"
                android:textColor="@color/text_tab_color" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_order_nonhold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/order_option_nonhold"
                android:textColor="@color/text_tab_color" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_order_noncomment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/order_option_noncomment"
                android:textColor="@color/text_tab_color" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scaleType="matrix"
            android:src="@drawable/cursor" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>