<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_title"
        style="@style/headLayoutStyle" >

        <ImageView
            android:id="@+id/iv_back"
            style="@style/headBackStyle" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/headTitleStyle"
            android:text="@string/comment_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_comment_result"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_comm_key1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="好评率："
                android:textColor="@color/app_text_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_comm_value1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textColor="@color/main_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_comm_key2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="累计评价："
                android:textColor="@color/app_text_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_comm_value2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/main_color"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <RelativeLayout
        android:id="@+id/rl_optionmenu"
        android:layout_width="match_parent"
        android:layout_height="50dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_store_comment_better"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/store_comment_better"
                android:textColor="@color/text_tab_color"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_store_comment_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/store_comment_medium"
                android:textColor="@color/text_tab_color"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_store_comment_worst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/store_comment_worst"
                android:textColor="@color/text_tab_color"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/line_color" />

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="1dip"
            android:layout_height="2dip"
            android:layout_alignParentBottom="true"
            android:background="#EB4E23"
            android:scaleType="matrix" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <com.imooly.android.widget.PullToRefreshListView
            android:id="@+id/store_comment_list"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@drawable/order_dash_line"
            android:listSelector="#00000000" />
    </LinearLayout>

</LinearLayout>